--- a/gi-pro-mobile/www/templates/professionalWithServices.html
+++ b/gi-pro-mobile/www/templates/professionalWithServices.html
@@ -8,108 +8,7 @@
     <!-- INFO -->
     <ion-tab title="{{'prof_info' | translate | uppercase}}" on-select="selectProfile()">
       <ion-pane>
-        <ion-content>
-          <div class="professional">
-            <div class="row">
-              <div class="col col-33">
-                <div class="profile-image-container" ng-click="uploadImage()">
-                  <div class="profile-image-placeholder" ng-if="!profile.imageUrl">
-                    <div class="upload"><i class="icon ion-camera"></i></div>
-                  </div>
-                  <div class="profile-image" ng-if="!!profile.imageUrl">
-                    <img ng-src="{{profile.imageUrl}}">
-                  </div>
-                </div>
-              </div>
-              <div class="col col-67">
-                <ul>
-                  <li class="profession">{{professions[profile.type].name}}</li>
-                  <li class="zone">{{zones[profile.area].name}}</li>
-                </ul>
-              </div>
-            </div>
-            <div class="contacts" ng-class="{'editing': editing}">
-              <!-- Phones -->
-              <div class="item item-input" ng-repeat="phone in edit.phone">
-                <i class="icon ion-android-call"></i>
-                <a ng-if="!editing" href="tel:{{phone}}">{{phone}}</a>
-                <input ng-if="editing" type="tel" ng-model="edit.phone[$index]">
-                <button ng-if="editing" class="button button-clear button-positive button-icon icon ion-close-circled" ng-click="removeItem('phone', $index)"></button>
-              </div>
-              <div class="item item-input" ng-if="editing">
-                <i class="icon ion-android-call"></i>
-                <input type="tel" ng-model="edit.newItems.phone">
-                <button class="button button-clear button-balanced button-icon icon ion-checkmark-circled" ng-click="addItem('phone')"
-                  ng-disabled="edit.phone.indexOf(edit.newItems.phone) > -1 || !edit.newItems.phone.trim()"></button>
-              </div>
-              <!-- Cellphones -->
-              <div class="item item-input" ng-repeat="cellPhone in edit.cellPhone">
-                <i class="icon ion-android-phone-portrait"></i>
-                <a ng-if="!editing" href="tel:{{cellPhone}}">{{cellPhone}}</a>
-                <input ng-if="editing" type="tel" ng-model="edit.cellPhone[$index]">
-                <button ng-if="editing" class="button button-clear button-positive button-icon icon ion-close-circled" ng-click="removeItem('cellPhone', $index)"></button>
-              </div>
-              <div class="item item-input" ng-if="editing">
-                <i class="icon ion-android-phone-portrait"></i>
-                <input type="tel" ng-model="edit.newItems.cellPhone">
-                <button class="button button-clear button-balanced button-icon icon ion-checkmark-circled" ng-click="addItem('cellPhone')"
-                  ng-disabled="edit.cellPhone.indexOf(edit.newItems.cellPhone) > -1 || !edit.newItems.cellPhone.trim()"></button>
-              </div>
-              <!-- PEC -->
-              <div class="item item-input">
-                <i class="icon ion-email-unread"></i>
-                <a href="mailto:{{profile.pec}}">{{profile.pec}}</a>
-              </div>
-              <!-- Emails -->
-              <div class="item item-input" ng-repeat="mail in edit.mail">
-                <i class="icon ion-email"></i>
-                <a ng-if="!editing" href="mailto:{{mail}}">{{mail}}</a>
-                <input ng-if="editing" type="email" ng-model="edit.mail[$index]">
-                <button ng-if="editing" class="button button-clear button-positive button-icon icon ion-close-circled" ng-click="removeItem('mail', $index)"></button>
-              </div>
-              <div class="item item-input" ng-if="editing">
-                <i class="icon ion-email"></i>
-                <input type="email" ng-model="edit.newItems.mail">
-                <button class="button button-clear button-balanced button-icon icon ion-checkmark-circled" ng-click="addItem('mail')"
-                  ng-disabled="edit.mail.indexOf(edit.newItems.mail) > -1 || !edit.newItems.mail.trim()"></button>
-              </div>
-              <!-- Fax -->
-              <div class="item item-input" ng-repeat="fax in edit.fax">
-                <i class="icon ion-printer"></i>
-                <a ng-if="!editing" href="tel:{{fax}}">{{fax}}</a>
-                <input ng-if="editing" type="tel" ng-model="edit.fax[$index]">
-                <button ng-if="editing" class="button button-clear button-positive button-icon icon ion-close-circled" ng-click="removeItem('fax', $index)"></button>
-              </div>
-              <div class="item item-input" ng-if="editing">
-                <i class="icon ion-printer"></i>
-                <input type="tel" ng-model="edit.newItems.fax">
-                <button class="button button-clear button-balanced button-icon icon ion-checkmark-circled" ng-click="addItem('fax')"
-                  ng-disabled="edit.fax.indexOf(edit.newItems.fax) > -1 || !edit.newItems.fax.trim()"></button>
-              </div>
-            </div>
-            <!--
-            <div class="description">
-              <div class="description_label">{{'prof_descrizione_label' | translate}}</div>
-              <div class="description_text" ng-if="!editing">{{profile.description}}</div>
-            </div>
-            -->
-            <div class="competences" ng-class="{'editing': editing}">
-              <div class="title">{{'prof_competences_label' | translate}}</div>
-              <div class="item item-input-inset" ng-if="editing">
-                <input type="text" ng-model="edit.newItems.competence" placeholder="inserisci la tua competenza">
-                <button class="button button-clear button-balanced button-icon icon ion-checkmark-circled" ng-disabled="!edit.newItems.competence"
-                  ng-click="addCompetence()"></button>
-              </div>
-              <div class="competences-tags">
-                <span class="padding-horizontal" ng-if="!editing && (!profile.customProperties.competences || profile.customProperties.competences.length == 0)">-</span>
-                <span class="tag" ng-class="{'editing': editing}" ng-repeat="competenza in profile.customProperties.competences">
-                  {{competenza}}
-                  <button class="button button-small button-clear button-positive icon ion-close-circled" ng-if="editing" ng-click="deleteCompetence($index)"></button>
-                </span>
-              </div>
-            </div>
-          </div>
-        </ion-content>
+        <div ng-include="'templates/include_professional.html'" onload="init()"></div>
       </ion-pane>
     </ion-tab>
     <!-- SERVICES -->
