--- a/gi-pro-mobile/www/templates/serviceAndProf.html
+++ b/gi-pro-mobile/www/templates/serviceAndProf.html
@@ -44,7 +44,7 @@
           </div>
           <!-- List view -->
           <div ng-if="viewAsList">
-            <ion-scroll ng-style="styles.resultsList" ng-show="servicesList && servicesList.length">
+            <ion-scroll ng-style="styles.container" ng-show="servicesList && servicesList.length">
               <div class="list results-list services-list">
                 <ion-refresher on-refresh="loadServices()">
                 </ion-refresher>
@@ -66,7 +66,7 @@
           <!-- Map view -->
           <div class="map-visualization" ng-if="!viewAsList">
             <div id="modal-map-container" data-tap-disabled="true">
-              <leaflet event-broadcast="events" center="center" markers="servicesMarkers" style="width: 100%; height: 700px;" ng-init="initServicesTab()"
+              <leaflet event-broadcast="events" center="center" markers="servicesMarkers" ng-style="styles.container" ng-init="initServicesTab()"
                 id="serviceMap"></leaflet>
             </div>
           </div>
@@ -92,7 +92,7 @@
           </div>
           <!-- List view -->
           <div ng-if="viewAsList">
-            <ion-scroll ng-style="styles.resultsList" ng-show="professionalsList && professionalsList.length">
+            <ion-scroll ng-style="styles.container" ng-show="professionalsList && professionalsList.length">
               <div class="list results-list professionals-list">
                 <ion-refresher on-refresh="loadProfessional()">
                 </ion-refresher>
@@ -114,7 +114,7 @@
           <!-- Map view -->
           <div class="map-visualization" ng-if="!viewAsList">
             <div id="modal-map-container" data-tap-disabled="true">
-              <leaflet event-broadcast="events" center="center" markers="professionalMarkers" style="width: 100%; height: 700px;" ng-init="initProfessionalsTab()"
+              <leaflet event-broadcast="events" center="center" markers="professionalMarkers" ng-style="styles.container" ng-init="initProfessionalsTab()"
                 id="professionMap"></leaflet>
             </div>
           </div>
