--- a/gi-pro-mobile/www/templates/tutorial.html
+++ b/gi-pro-mobile/www/templates/tutorial.html
@@ -20,14 +20,16 @@
           <img src="http://lorempixel.com/400/251/business" />
         </div>
       </ion-slide-page>
+      <!--
       <ion-slide-page>
         <div class="tutorial-content padding">
           <button class="button button-block button-energized" ng-click="endTutorial()">{{'login_as_pro' | translate}}</button>
           <button class="button button-block button-energized" ui-sref="app.serviceAndProf">{{'enter_no_login' | translate}}</button>
         </div>
       </ion-slide-page>
+      -->
     </ion-slides>
-    <!--<div class="tutorial-footer">
+    <div class="tutorial-footer">
       <div class="row row-center">
         <div class="col">
           <button class="button button-block button-energized" ng-click="endTutorial()">{{'login_as_pro' | translate}}</button>
@@ -38,6 +40,6 @@
           <button class="button button-block button-energized" ui-sref="app.serviceAndProf">{{'enter_no_login' | translate}}</button>
         </div>
       </div>
-    </div>-->
+    </div>
   </ion-content>
 </ion-view>
