--- a/gi-pro-mobile/www/templates/professionalWithServices.html
+++ b/gi-pro-mobile/www/templates/professionalWithServices.html
@@ -1,8 +1,8 @@
 <ion-view view-title="{{profile.name}} {{profile.surname}}" class="prof-details">
   <ion-nav-buttons side="right">
     <button class="button button-icon button-clear" ng-class="{'ion-edit': !editing, 'ion-checkmark': editing}" ng-click="toggleEditing()"
-      ng-show="isMyProfile&&isOnProfile"></button>
-    <button class="button button-icon button-clear ion-plus-round" ng-click="addNewService()" ng-show="isMyProfile&&!isOnProfile"></button>
+      ng-show="isMyProfile && isOnProfile"></button>
+    <button class="button button-icon button-clear ion-plus" ng-click="addNewService()" ng-show="isMyProfile && !isOnProfile"></button>
   </ion-nav-buttons>
   <ion-tabs class="tabs-calm">
     <!-- INFO -->
@@ -12,7 +12,7 @@
       </ion-pane>
     </ion-tab>
     <!-- SERVICES -->
-    <ion-tab title="{{'prof_services' | translate|uppercase}}" on-select="selectServices()">
+    <ion-tab title="{{'prof_services' | translate | uppercase}}" on-select="selectServices()">
       <ion-pane>
         <ion-content>
           <!--
