--- a/gi-pro-mobile/www/templates/menu.html
+++ b/gi-pro-mobile/www/templates/menu.html
@@ -1,13 +1,14 @@
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content>
-    <ion-nav-bar class="bar-calm">
+    <ion-nav-bar class="bar bar-header bar-calm">
       <ion-nav-back-button>
       </ion-nav-back-button>
       <ion-nav-buttons side="left">
         <button class="button button-icon button-clear ion-navicon" menu-toggle="left"></button>
       </ion-nav-buttons>
     </ion-nav-bar>
-    <ion-nav-view name="menuContent"></ion-nav-view>
+    <ion-nav-view name="menuContent">
+    </ion-nav-view>
   </ion-side-menu-content>
   <ion-side-menu side="left">
     <!--
